[ADD] all content in each path of the API

--- a/404.html
+++ b/404.html
@@ -52,9 +52,11 @@
     </style>
 </head>
 <body>
-    <div class="welcome-container">
-        <h1>Welcome</h1>
-        <p>We're glad to have you here 🌟</p>
-    </div>
+<div class="welcome-container">
+    <h1>404 NOT FOUND</h1>
+    <p>La ressource que vous cherchez n'existe pas.</p>
+    <a href="/">Retour à l'accueil</a>
+</div>
 </body>
 </html>
+
